# serializer version: 1
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."credentials_reviewed_at",
         "posthog_user"."requested_2fa_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."allow_impersonation",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."allow_sidebar_suggestions",
         "posthog_user"."shortcut_position",
         "posthog_user"."passkeys_enabled_for_2fa",
         "posthog_user"."hide_mcp_hints",
         "posthog_user"."onboarding_skipped_at",
         "posthog_user"."onboarding_skipped_reason",
         "posthog_user"."onboarding_skipped_organization_id",
         "posthog_user"."onboarding_delegated_to_invite_id",
         "posthog_user"."onboarding_delegated_to_organization_id",
         "posthog_user"."onboarding_delegation_accepted_at",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE ("posthog_user"."is_active"
         AND "posthog_user"."id" = 99999)
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.1
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.2
  '''
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.3
  '''
  SELECT 1 AS "a"
  FROM "posthog_organizationmembership"
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 99999)
  LIMIT 1
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.4
  '''
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organizationmembership"."invited_by_id",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."logo_media_id",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."is_active",
         "posthog_organization"."is_not_active_reason",
         "posthog_organization"."session_cookie_age",
         "posthog_organization"."is_member_join_email_enabled",
         "posthog_organization"."is_ai_data_processing_approved",
         "posthog_organization"."is_ai_training_opted_in",
         "posthog_organization"."is_ai_training_locked",
         "posthog_organization"."is_ai_training_cta_shown",
         "posthog_organization"."enforce_2fa",
         "posthog_organization"."members_can_invite",
         "posthog_organization"."members_can_use_personal_api_keys",
         "posthog_organization"."allow_publicly_shared_resources",
         "posthog_organization"."default_role_id",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."default_experiment_stats_method",
         "posthog_organization"."default_anonymize_ips",
         "posthog_organization"."is_hipaa",
         "posthog_organization"."is_pending_deletion",
         "posthog_organization"."customer_id",
         "posthog_organization"."available_product_features",
         "posthog_organization"."usage",
         "posthog_organization"."never_drop_data",
         "posthog_organization"."customer_trust_scores",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."is_platform"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE "posthog_organizationmembership"."user_id" = 99999
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.5
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."organization_id"
  FROM "posthog_team"
  WHERE "posthog_team"."organization_id" IN ('00000000-0000-0000-0000-000000000000'::uuid)
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.6
  '''
  SELECT "posthog_team"."id" AS "id"
  FROM "posthog_team"
  WHERE "posthog_team"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.7
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."updated_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime",
         "posthog_featureflag"."bucketing_identifier",
         "posthog_featureflag"."last_called_at"
  FROM "posthog_featureflag"
  WHERE (NOT ("posthog_featureflag"."deleted")
         AND "posthog_featureflag"."key" = 'key-1'
         AND "posthog_featureflag"."team_id" IN (1,
                                                 2,
                                                 3,
                                                 4,
                                                 5 /* ... */))
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.8
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."credentials_reviewed_at",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."requested_2fa_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."allow_impersonation",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."allow_sidebar_suggestions",
         "posthog_user"."shortcut_position",
         "posthog_user"."passkeys_enabled_for_2fa",
         "posthog_user"."hide_mcp_hints",
         "posthog_user"."onboarding_skipped_at",
         "posthog_user"."onboarding_skipped_reason",
         "posthog_user"."onboarding_skipped_organization_id",
         "posthog_user"."onboarding_delegated_to_invite_id",
         "posthog_user"."onboarding_delegated_to_organization_id",
         "posthog_user"."onboarding_delegation_accepted_at",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestOrganizationFeatureFlagGet.test_get_feature_flag_success.9
  '''
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."credentials_reviewed_at",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."requested_2fa_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."strapi_id",
         "posthog_user"."is_active",
         "posthog_user"."role_at_organization",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."allow_impersonation",
         "posthog_user"."toolbar_mode",
         "posthog_user"."hedgehog_config",
         "posthog_user"."allow_sidebar_suggestions",
         "posthog_user"."shortcut_position",
         "posthog_user"."passkeys_enabled_for_2fa",
         "posthog_user"."hide_mcp_hints",
         "posthog_user"."onboarding_skipped_at",
         "posthog_user"."onboarding_skipped_reason",
         "posthog_user"."onboarding_skipped_organization_id",
         "posthog_user"."onboarding_delegated_to_invite_id",
         "posthog_user"."onboarding_delegated_to_organization_id",
         "posthog_user"."onboarding_delegation_accepted_at",
         "posthog_user"."events_column_config",
         "posthog_user"."email_opt_in"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 99999
  LIMIT 21
  '''
# ---
